# rxr-mask

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  example_layer_optimization.py  example_optimized_workflow.py  examples.html  genindex.html  index.html  main.py  meassure_time.ipynb  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  sg_execution_times.html  tests.ipynb
_modules/: index.html
_modules/rxrmask/backends/: pr_backend.html  (+1 more)
_sources/: examples.rst.txt  index.rst.txt
_sources/api/: optimization.rst.txt  pint_init.rst.txt
api/: backends.html  core.html  materials.html  optimization.html  pint_init.html  utils.html
auto_examples/: sg_execution_times.html  structurecreation.html
docs/examples/: basic_compound.py  index.rst  structurecreation.py
docs/source/: conf.py  sg_execution_times.rst
pythonreflectivity/: setup.py
rxrmask/: __init__.py  pint_init.py
rxrmask/backends/: __init__.py  backend.py  pr_backend.py  reflectivitybackend.py  udkm_backend.py
rxrmask/core/: __init__.py  atom.py  compound.py  formfactor.py  layer.py  loaddata.py  optimization.py  parameter.py  reflectivitydata.py  structure.py
rxrmask/materials/: __init__.py
rxrmask/optimization/: __init__.py  fitting.py  optimization.py  rxr.py
rxrmask/utils/: __init__.py  adaptive_layer_segmentation.py  density_profile.py  plot.py
source/: main.pyre.py  main.udkm.py  plot_utils.py
source/backends/: pr_backend.py  udkm_backend.py
source/core/: atom.py  compound.py  formfactor.py  layer.py  parameter.py  structure.py
source/utils/: constants.py
tests/: basic_compound.ipynb  basic_compound.py  density_profile.ipynb  fitting.ipynb  fitting.py  fitting_data.ipynb  fitting_data_2-2.ipynb  fitting_data_2-3.ipynb  fitting_data_2.ipynb  fitting_data_3.ipynb  fitting_data_4.ipynb  formfactor_data.ipynb  group_elements.ipynb  main.py  meassure_time.ipynb  test_data.txt  test_fitt.py  tests.ipynb
(+16 files in other folders)
