[build-system]
requires = [
  "setuptools",
  "wheel",
  "cython",
  "numpy",
]
build-backend = "setuptools.build_meta"

[project]
name = "rxrmask"
version = "0.1.0"
description = "Tools for modeling resonant X-ray reflectivity."
readme = "README.md"
requires-python = ">=3.10"
# license = { file = "LICENSE" }
authors = [
  { name = "Nicolas Aguilera G.", email = "niagar25@gmail.com" },
]
keywords = ["x-ray", "reflectivity", "resonant"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "pint",
  "pandas",
  "joblib",
  "udkm1Dsim"
]


[tool.setuptools]
[tool.setuptools.packages.find]
where = ["."]
include = ["rxrmask*", "pythonreflectivity*"]

[tool.setuptools.package-data]
"pythonreflectivity" = ["Pythonreflectivity.pyx"]
"rxrmask" = ["materials/form_factor/*", "materials/magnetic_form_factor/*", "materials/atomic_mass.txt"]